modified for Hinf691

--- a/00-1-age-and-year-of-deathofharold-shipmans-victims/00-1-age-year-shipman victims-x.Rmd
+++ b/00-1-age-and-year-of-deathofharold-shipmans-victims/00-1-age-year-shipman victims-x.Rmd
@@ -3,6 +3,7 @@
   #output: md_document
   output: html_document
   #output: pdf_document
+  Modified for HINF591
 ---
 
 ***************************************************************************
